# object_tracking_2D

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  ebt_extra.cmake.in
ci/: after_failure_linux.sh  before_install_linux.sh  script_linux.sh
cmake/: EbtMakeConfigFile.cmake  FindASSIMP.cmake
doc/: HISTORY.txt  HOWTO.txt  howtotestbuild.txt
docker/: Makefile  run.sh
docker/demo/: Dockerfile  run.sh
docker/dep/: Dockerfile
docker/dev/: Dockerfile
docker/dox/: Dockerfile
docker/gui/: Dockerfile
docker/nvidia/: .gitignore  Dockerfile  build.sh  run.sh
include/: Camera.h  EdgeTracker.h  HomoTransform.h  ObjectModel.h  ParticleFilter.h  PoseEstimationSURF.h  Timer.h  glm.h  randn.h  tracker_base.h  tracker_base.h~  tracker_irls.h  tracker_pf.h  tracker_pf_texture.h  tracker_pf_textureless.h
include/object_tracking_2D/: EdgeTracker.h  ModelImport.h  ObjectModel.h  ParticleFilter.h  PoseEstimationSURF.h  Timer.h  epnp.h  glm.h  imageReceiver.h  non_randomness.h  randn.h  tracker_base.h  tracker_irls.h  tracker_pf.h  tracker_pf_texture.h  tracker_pf_textureless.h
scripts/: cc_exe_airfoil_test.cmd  cc_exe_boeing_demo_2011.cmd  cc_exe_boeing_demo_2012.cmd  cc_exe_boeing_demo_2013.cmd  cc_exe_cvpr12_real.cmd  cc_exe_cvpr12_real_annealing.cmd  cc_exe_icra10.cmd  cc_exe_ijrr11_real.cmd  cc_exe_ijrr11_real_IRLS.cmd  cc_exe_ijrr11_synth.cmd  cc_exe_ijrr11_synth_IRLS.cmd  cc_exe_ijrr11_synth_a.cmd  cc_exe_ijrr11_synth_b.cmd  heni_peugeot_demo1.sh  heni_peugeot_demo1.sh~  heni_peugeot_demo2.sh  heni_peugeot_demo2.sh~  heni_peugeot_demo3.sh  heni_peugeot_demo3.sh~  heni_peugeot_demo4.sh
src/: #objectmodel.cpp#  Camera.cpp  Camera.cpp~  EdgeTracker.cpp  HomoTransform.cpp  ModelImport.cpp  ParticleFilter.cpp  PoseEstimationSURF.cpp  PoseEstimationSURF.cpp~  edge_templates_generator.cpp  epnp.cpp  glm.cpp  main.cpp  main.cpp~  objectmodel.cpp  objectmodel.cpp~
